[project]
name = "irmin"
version = "0.3.3"
dependencies = ["cffi"]
requires-python = ">=3.7"
authors = [{ name = "Zach Shipko", email = "zachshipko@gmail.com" }]
description = "Irmin bindings for Python"
readme = "README.md"
license = { text = "ISC" }

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/mirage/irmin-py"
Repository = "https://github.com/mirage/irmin-py.git"
"Bug Tracker" = "https://github.com/mirage/irmin-py/issues"
